Correction finale permissions et prix

--- a/explorer.html
+++ b/explorer.html
@@ -142,7 +142,7 @@
 
     <!-- Skeleton initial -->
     <div id="table-wrap">
-      <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));gap:0.75rem">
+      <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:20px;justify-content:center">
         <div class="skeleton h-24 rounded-2xl"></div><div class="skeleton h-24 rounded-2xl"></div>
         <div class="skeleton h-24 rounded-2xl"></div><div class="skeleton h-24 rounded-2xl"></div>
         <div class="skeleton h-24 rounded-2xl"></div><div class="skeleton h-24 rounded-2xl"></div>
@@ -321,7 +321,7 @@
     }
 
     wrap.innerHTML = `
-      <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));gap:0.75rem">
+      <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:20px;justify-content:center">
         ${slice.map((c, i) => communeRow(c, i)).join('')}
       </div>`;
 
