--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
   async function renderVille(container, slug) {
     // Structure fixe : deux colonnes, city-details-2 cachée tant que compare inactif
     container.innerHTML = `
-      <div id="compare-grid" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+      <div id="compare-grid" class="grid grid-cols-1 gap-6">
         <div id="city-details-1" class="min-w-0">
           <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
             ${Array(8).fill('<div class="skeleton h-24 rounded-2xl"></div>').join('')}
@@ -612,7 +612,7 @@
       <div class="bento-card ${fb} border border-border rounded-2xl p-5">
         <p class="text-xs text-gray-500 uppercase tracking-wider mb-1">Fibre FTTH</p>
         <p class="text-2xl font-bold ${fc}">${fibreOk ? c.fibre_pct + ' %' : '—'}</p>
-        <p class="text-xs text-gray-500 mt-1">locaux raccordables</p>
+        <p class="text-xs text-gray-500 mt-1">${fibreOk ? 'locaux raccordables' : 'données ARCEP non disponibles'}</p>
         ${fibreOk ? `<div class="mt-2 bg-black/20 rounded-full h-1.5"><div class="bar-fill h-1.5 rounded-full ${fbc}" style="width:${c.fibre_pct}%"></div></div>` : ''}
       </div>
       <div class="bento-card bg-card border border-border rounded-2xl p-5">
@@ -622,18 +622,21 @@
       </div>
     </div>
 
-    ${c.immo ? `
     <div class="bento-card bg-card border border-border rounded-2xl p-5 mb-4">
       <div class="flex items-center justify-between mb-4">
         <h2 class="text-sm font-semibold text-white">Immobilier (DVF)</h2>
-        <span class="badge bg-indigo-500/20 text-indigo-300">${c.immo.annee_dvf || 'DVF'}</span>
+        <span class="badge bg-indigo-500/20 text-indigo-300">${c.immo?.annee_dvf || 'DVF'}</span>
       </div>
+      ${c.immo ? `
       <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
         ${c.immo.prix_m2_median ? `<div><p class="text-xs text-gray-500 uppercase tracking-wider mb-1">Prix médian m²</p><p class="text-xl font-bold text-white">${Math.round(c.immo.prix_m2_median).toLocaleString('fr')} €</p></div>` : ''}
         ${c.immo.loyer_median   ? `<div><p class="text-xs text-gray-500 uppercase tracking-wider mb-1">Loyer médian m²</p><p class="text-xl font-bold text-white">${c.immo.loyer_median.toFixed(1)} €</p></div>` : ''}
         ${c.immo.nb_transactions? `<div><p class="text-xs text-gray-500 uppercase tracking-wider mb-1">Transactions</p><p class="text-xl font-bold text-white">${c.immo.nb_transactions.toLocaleString('fr')}</p></div>` : ''}
-      </div>
-    </div>` : ''}
+      </div>` : `
+      <p class="text-sm text-gray-500">Aucune transaction DVF enregistrée pour cette commune.<br>
+        <span class="text-xs text-gray-600">Les petites communes peuvent ne pas figurer dans la base DVF si le volume de ventes est insuffisant.</span>
+      </p>`}
+    </div>
 
     <div class="bento-card bg-card border border-border rounded-2xl p-5 mb-4">
       <h2 class="text-sm font-semibold text-white mb-3">Carburants à proximité</h2>
@@ -669,7 +672,9 @@
 
     history.pushState(null, '', '/comparer/' + codeA);
 
-    // Ajouter la classe de séparation visuelle sur la colonne A
+    // Passer à la grille 2 colonnes et ajouter la séparation visuelle
+    const grid = document.getElementById('compare-grid');
+    if (grid) grid.classList.add('lg:grid-cols-2');
     const col1 = document.getElementById('city-details-1');
     if (col1) col1.classList.add('in-compare');
 
@@ -710,9 +715,10 @@
     isComparing = false;
     history.pushState(null, '', '/ville/' + codeA);
 
+    const grid = document.getElementById('compare-grid');
+    if (grid) grid.classList.remove('lg:grid-cols-2');
     const col1 = document.getElementById('city-details-1');
     if (col1) col1.classList.remove('in-compare');
-
     const col2 = document.getElementById('city-details-2');
     if (col2) { col2.classList.add('hidden'); col2.innerHTML = ''; }
   }
@@ -953,11 +959,18 @@
                 </tr>
               </thead>
               <tbody>
-                ${stations.map(s => `
+                ${stations.map(s => {
+                  const stationName = s.nom || s.adresse || '—';
+                  const stationCity = s.ville || s.cp;
+                  const showCity = stationName !== stationCity;
+                  return `
                 <tr class="border-b border-border/40 last:border-0">
-                  <td class="py-1.5 pr-4 text-gray-300 max-w-[130px] truncate" title="${esc(s.adresse || '')}">${esc(s.nom || s.ville || s.cp)}</td>
+                  <td class="py-1.5 pr-4 max-w-[160px]" title="${esc([s.nom, s.adresse, s.ville].filter(Boolean).join(' – '))}">
+                    <p class="text-gray-300 truncate">${esc(stationName)}</p>
+                    ${showCity ? `<p class="text-gray-600 truncate" style="font-size:0.65rem">${esc(stationCity)}</p>` : ''}
+                  </td>
                   ${TYPES.map(t => `<td class="py-1.5 pr-3 ${s.prix[t] ? 'text-white' : 'text-gray-600'}">${fmtFuelPrice(s.prix[t])}</td>`).join('')}
-                </tr>`).join('')}
+                </tr>`;}).join('')}
               </tbody>
             </table>
           </div>`;
